# dealii

include/deal.II/base/: polynomials_raviart_thomas_new.h
include/deal.II/fe/: fe_raviart_thomas_new.h
include/deal.II/lac/: tensor_product_matrix.h
include/deal.II/matrix_free/: evaluation_kernels.h  mapping_info.h  mapping_info.templates.h  matrix_free.h  matrix_free.templates.h  shape_info.h  shape_info.templates.h  tensor_product_kernels.h
mytests/: CMakeLists.txt  benchmark_api.h  main_test01.cc
mytests/MW_constrhs/: CMakeLists.txt  bm_report  main.cc
mytests/MW_constrhs[p]/: CMakeLists.txt  bm_report  main.cc
mytests/MyLoop/: CMakeLists.txt  bm-report-colorloop  bm-report-oldloop  main.cc
mytests/WSrun_constrhs/: CMakeLists.txt  bm-report  main.cc
mytests/WSrun_for_precond/: CMakeLists.txt
mytests/WSrun_for_precond/include/: PSCPreconditioner.h
mytests/WSrun_for_precond/source/: DDHandler.inst  PSCPreconditioner.cc  PSCPreconditioner.inst  main.cc
mytests/neobenchmark/: CMakeLists.txt
mytests/neobenchmark/source/: LaplaceMeshworker.cc  MyLaplace.cc
source/base/: CMakeLists.txt  polynomials_raviart_thomas_new.cc
source/fe/: CMakeLists.txt  fe_raviart_thomas_new.cc  fe_raviart_thomas_new.inst.in  fe_raviart_thomas_nodal_new.cc  fe_raviart_thomas_nodal_new.inst.in
tests/fullydistributed_grids/: copy_serial_tria_04.cc
tests/matrix_free/: evaluation_kernel_raviart_thomas.cc  evaluation_kernel_raviart_thomas.output  tensor_product_kernel_anisotropic.cc  tensor_product_kernel_anisotropic.output
